--- a/web/content/index.html
+++ b/web/content/index.html
@@ -3,8 +3,23 @@
 <head>
 	<meta charset="UTF-8">
 	<title>tTalk</title>
+	<link rel="stylesheet" href="css/foundation.css">
+	<link rel="stylesheet" href="css/custom.css">
 </head>
-<body>
-	<h1>tTalk</h1>
+<body ng-app="tTalk">
+	<header>
+		<div class="logo">Maybe a logo will be here</div>
+	</header>
+	<section>
+		<ng-view></ng-view>
+	</section>
+	<footer></footer>
+	<script src="../library/angular.js"></script>
+	<script src="../library/angular-route.js"></script>
+	<script src="js/common/configs.js" ></script>
+	<script src="js/helpers/HttpService.js" ></script>
+	<script src="js/common/routes.js" ></script>
+	<script src="js/user/LoginController.js" ></script>
+	<script src="js/talks/MainController.js" ></script>
 </body>
 </html>
