--- a/web/content/index.html
+++ b/web/content/index.html
@@ -14,8 +14,8 @@
 		<ng-view></ng-view>
 	</section>
 	<footer></footer>
-	<script src="../library/angular.js"></script>
-	<script src="../library/angular-route.js"></script>
+	<script src="vendor/angular.js"></script>
+	<script src="vendor/angular-route.js"></script>
 	<script src="js/common/configs.js" ></script>
 	<script src="js/helpers/HttpService.js" ></script>
 	<script src="js/common/routes.js" ></script>
