--- a/web/content/index.html
+++ b/web/content/index.html
@@ -16,11 +16,12 @@
 	<footer></footer>
 	<script src="vendor/angular.js"></script>
 	<script src="vendor/angular-route.js"></script>
-	<script src="js/common/configs.js" ></script>
+	<script src="js/common/configs.js"></script>
 	<script src="js/common/EventController.js"></script>
 	<script src="js/helpers/HttpService.js" ></script>
-	<script src="js/common/routes.js" ></script>
-	<script src="js/user/LoginController.js" ></script>
-	<script src="js/talks/MainController.js" ></script>
+	<script src="js/common/routes.js"></script>
+	<script src="js/user/LoginController.js"></script>
+	<script src="js/user/RegisterController.js"></script>
+	<script src="js/talks/MainController.js"></script>
 </body>
 </html>
