Add create talk possibility
Add create talk possibility, add talk page and it controller some other
changes

--- a/web/content/index.html
+++ b/web/content/index.html
@@ -50,5 +50,7 @@
 	<script src="js/user/LoginController.js"></script>
 	<script src="js/user/RegisterController.js"></script>
 	<script src="js/talks/MainController.js"></script>
+	<script src="js/talks/CreateTalkController.js"></script>
+	<script src="js/talks/TalkController.js"></script>
 </body>
 </html>
