--- a/web/content/index.html
+++ b/web/content/index.html
@@ -42,6 +42,7 @@
 	<script src="vendor/angular.js"></script>
 	<script src="vendor/angular-route.js"></script>
 	<script src="vendor/autofill-event.js"></script>
+	<script src="vendor/angular-file-upload.min.js"></script>
 	<script src="js/common/configs.js"></script>
 	<script src="js/common/EventController.js"></script>
 	<script src="js/helpers/HttpService.js" ></script>
