--- a/web/content/index.html
+++ b/web/content/index.html
@@ -38,12 +38,11 @@
 	<footer></footer>
 	<script src="vendor/angular.js"></script>
 	<script src="vendor/angular-route.js"></script>
+	<script src="vendor/angular-resource.js"></script>
 	<script src="vendor/autofill-event.js"></script>
 	<script src="vendor/angular-file-upload.min.js"></script>
 	<script src="js/common/configs.js"></script>
 	<script src="js/common/EventController.js"></script>
-	<script src="js/helpers/HttpService.js" ></script>
-	<script src="js/common/routes.js"></script>
 	<script src="js/common/HeaderController.js"></script>
 	<script src="js/user/LoginController.js"></script>
 	<script src="js/user/RegisterController.js"></script>
