--- a/web/content/index.html
+++ b/web/content/index.html
@@ -15,7 +15,7 @@
 	<header class="mainHeader" ng-controller="HeadCtrl">
 		<div class="myHeader clearfix">
 			<a href="#/main" class="logo"><img src="/img/logo.png" alt="tTalk"></a>
-			<div class="banner">
+			<div class="banner" style="display: none;">
 				You banner can be here
 			</div>
 			<nav class="userWrapper" ng-if="visHeader" ng-cloak>
